# MyEmu

./: .gdb_history  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTES.txt  README.txt  decode_nid.go  elf-sce.h  main.cpp  mmap_test  mmap_test.cpp
Gcn/: AMDGPUDecoderTables_temp.inc  AMDGPUGenInstrInfo_INSTRINFO.inc  AMDGPUGenRegisterInfo_REGINFO.inc  CMakeLists.txt  Gcn2Spirv.cpp  Gcn2Spirv.h  GcnBinary.h  SpirvBuilder.cpp  SpirvBuilder.h  SpirvClasses.cpp  SpirvCommon.h  SpirvContext.cpp  SpirvContext.h  SpirvEmitter.cpp  SpirvEmitter.h  SpirvInstruction.h  SpirvOperands.cpp  SpirvType.h  SpirvVisitor.cpp  bin.sb  disassembler.cpp  llvm_patch.diff  utils.cpp  utils.h  vk_test.cpp
Gcn/GcnDialect/: CMakeLists.txt  GcnDialect.cpp  GcnDialect.h  GcnDialect.td  GcnOps.cpp  GcnOps.h  GcnOps.td
Gcn/SpirvLibs/: all_libs.h  libImageHelpers.hlsl  libImageHelpers.spv.h  libMiscHelpers.hlsl  libMiscHelpers.spv.h  make_embeds.sh
Gcn/TestShaders/: basic.comp  image_heaps.frag  image_heaps.frag.spv  image_heaps.frag.spvasm
NidCrypto/: nid_hash.c  nid_hash.cpp  sonic_known_symbols.txt  sonic_symdump.txt
build_scripts/: add_dt_neededs.sh  link_bsd.ld  link_linux.ld
chroot/: CMakeLists.txt  chroot.cpp
elfpatcher/: CMakeLists.txt  elfjson.cpp  elfpatcher.cpp
git_patches/SPIRV-tools/: 0001-linker-stuff-for-emu.patch
git_patches/llvm-project/: 0001-Emu-changes.patch
include/: Common.h  DebugContext.h  Logger.h
include/Elf/: elf-sce.h
include/elfpatcher/: elfpatcher.h
include/freebsd/: bsd_mman.h
include/freebsd9.0/sys/: priority.h  rtprio.h
include/orbis/: freebsd_9.0_syscalls.hpp  orbis_syscalls.h  sce_file.h
include/orbis/sce_errors/: sce_kernel_error.h
include/ps4lib_overloads/SceLibKernel/: sce_pthread_common.h
include/ps4lib_overrides/: sce_kernel_scepthread.h
include/sce_errors/: sce_errors.h
include/system_compat/: globals.h  ps4_region.h
library_overloads/: all.c
main/: .gdbinit  CMakeLists.txt  Makefile  alt.cpp  chroot.cpp  chroot.h  elf-sce.h  elf_amd64.h  main.cpp  old.cpp  sorted_modules.txt  test.c
main/libFreeBsdCompat/: CMakeLists.txt  posix_wrappers.cpp  ps4_sysctl.h  syscall_handler.cpp  syscall_handler.s
main/syscall_dispatch/: CMakeLists.txt  posix_wrappers.cpp  syscall_dispatch.h  syscall_handler.cpp
nid_hash/: Makefile  find_all_identifiers.sh  match_hashed_symbols.sh  standalone.cpp
nid_hash/include/: nid_hash.h
nid_hash/lib/: CMakeLists.txt  nid_hash.cpp
nid_hash/standalone/: CMakeLists.txt  standalone.cpp
ps4lib_overloads/: CMakeLists.txt  Makefile  every.c  every.cpp
ps4lib_overloads/Misc/: CMakeLists.txt  misc.cpp
ps4lib_overloads/SceLibKernel/: CMakeLists.txt  sce_kernel.cpp  sce_pthread.cpp  sce_pthread_attr.cpp  sce_pthread_common.h  sce_pthread_cond.cpp  sce_pthread_mutex.cpp
ps4lib_overloads/SceLibcInternal/: CMakeLists.txt  malloc.cpp
reference/: ps4_kernel.py
stdlib_wrappers/: CMakeLists.txt  filesystem.cpp
system_compat/: CMakeLists.txt  exported_wrappers.h  filesystem.cpp  globals.cpp  misc.cpp  pmparser.c  ps4_region.cpp  syscall_handler.cpp  syscall_handler.h  wrappers.h
