#add_executable(old old.cpp)
#set_property(TARGET old PROPERTY POSITION_INDEPENDENT_CODE ON)
#if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
#    set(LINKER_ARGS -T "${CMAKE_CURRENT_SOURCE_DIR}/link_linux.ld")
#elseif(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
#    set(LINKER_ARGS -T "${CMAKE_CURRENT_SOURCE_DIR}/link_bsd.ld")
#endif()
#target_link_libraries(old pthread nid_hash)
#target_link_options(old PRIVATE "${LINKER_ARGS}")

add_subdirectory(libFreeBsdCompat)

add_executable(main main.cpp)
set_property(TARGET main PROPERTY POSITION_INDEPENDENT_CODE OFF)
target_link_libraries(main elfpatcher pthread dl nid_hash sqlite3 proc_maps_parser FreeBsdCompat)
